
2008-08-29  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8677: FE login redirect after logout does not work (thanx to Steffen Kamper)
	* Fixed bug #7812: cObj CONTENT should allowed on static_* tables (thanx to Georg Ringer)

2008-08-27  Martin Kutschker  <masi@typo3.org>

	* Added feature #9204: Allow icons in select of tt_content CE plugin (list_type; implementation by Steffen Kamper)

2008-08-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #9235: Enable synchronous load of some htmlArea RTE plugins
	* Follow-up for issue #9235: Enable synchronous load of some htmlArea RTE plugins (boolean inversion)

2008-08-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #9196: In htmlArea RTE, unable to create an external URL containing german umlauts

2008-08-21  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8826: calls to ini_set produces warnings

2008-08-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9201: Integrate support for definition list into htmlArea RTE

2008-08-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #5205: pi_loadLL() + no language file == full path disclosure

2008-08-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issue #9185: Incorrect initialization when hooks are present
	* Fixed bug #9197: Misbehaviour of DAM media tab in htmlArea RTE link insertion dialogue

2008-08-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for feature #4686: htmlArea RTE Spell Checker: add u modifier to preg_* operations
	* Follow-up for bug #8232: Creating and editing of fields, forms, etc. in FCE's is impossible if there is a section inside
	* Fixed issue #2714: In RTE htmlArea, unable to do an internal link with several parameters

2008-08-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8627: Translation of the belog-module (thanks to Christopher Stelmaszyk and Christian Kuhn)
	* Fixed bug #8532: enhance TYPO3 manual (inline) (thanks to Steffen Kamper, Jens Hoffman and Uschi Renziehausen)