@@ -3,6 +3,7 @@
 
 	* Fixed bug #8677: FE login redirect after logout does not work (thanx to Steffen Kamper)
 	* Fixed bug #7812: cObj CONTENT should allowed on static_* tables (thanx to Georg Ringer)
+	* Fixed bug #6601: fixed mount point issues with the local page tree cache
 
 2008-08-27  Martin Kutschker  <masi@typo3.org>
 
